removes CSS dependencies for docs and uses jQuery CDN

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>PSDEV Cutup Starter Pack</title>
-  <link rel="stylesheet" href="_/components/lib/lemonade/lemonade.css" />
   <link rel="stylesheet" href="_/components/terminalfour/css/docs.css" />
   <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-  <script src="_/components/lib/jquery/jquery.min.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
 </head>
 <body>
   <div class="container">
