removes index.html file and updates README with documentation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="bit-75">
         <a id="intro"></a>
         <h1>INTRODUCTION</h1>
-        <p>This document aims to develop a standardized workflow for developers creating HTML cutups for clients. This is aimed at providing a well-defined and consistent standard of coding across the whole team and should allow for more robust code with fewer bugs.</p>
+        <p>This document aims to develop a standardised workflow for developers creating HTML cutups for clients. This is aimed at providing a well-defined and consistent standard of coding across the whole team and should allow for more robust code with fewer bugs.</p>
         <p>There are several tools being used to make a developers life a little easier. These include tools such as SASS, Compass and Grunt amongst others. All of these tools are detailed in this document as well as a guide on how to get up and running with your development environment.</p>
         
         <a id="tools"></a>
