--- a/springhome_index.html
+++ b/springhome_index.html
@@ -174,84 +174,36 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <li data-target="#carousel-homepage" data-slide-to="2"></li>
   </ol>-->
 
-  <div class="carousel-inner" role="listbox"><div class="item active">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/braxton_tyrone1920x720.jpg" alt="SP2016 Braxton Tyrone Home" style="   " />
-      <div class="carousel-caption">
-       <h2>Title of Image One</h2>
-       <h3>Title of Image Two</h3>
+  <div class="carousel-inner" role="listbox">
+  <div class="item active">      
+    <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/braxton_tyrone1920x720.jpg" alt="SP2016 Braxton Tyrone Home" style="   " />
+
+
+
+    <div class="carousel-caption">
+          <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="max-height:100px;float:right;" />
+     <h2>Title of Image One</h2>
+     <h3>Title of Image Two</h3>
 		<div class="caption-readmore">
        	<hr> 
       	<a href="">Read More <i class="fa fa-angle-right"></i></a>
-		</div>         
+		</div>      
 	</div>
-    <div class="50-years-carousel"></div>
-</div><div class="item ">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/monique_brown1920x720.jpg" alt="Monique Brown" style="   " />
-      <div class="carousel-caption">
-       <h2>Title of Image Four</h2>
-       <h3>Blurb of Image Four</h3>
-		<div class="caption-readmore">
-       	<hr> 
-      	<a href="/a_to_z/">Read More <i class="fa fa-angle-right"></i></a>
-		</div>         
-	</div>
-    <div class="50-years-carousel"></div>
-</div><div class="item ">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/hugo_teufel1920x720.jpg" alt="Teufel Hugo" style="   " />
-      <div class="carousel-caption">
-       <h2>Teufel Hugo</h2>
-       <h3>Blurb of Image Six</h3>
-		<div class="caption-readmore">
-       	<hr> 
-      	<a href="/a_to_z/">Read More <i class="fa fa-angle-right"></i></a>
-		</div>         
-	</div>
-    <div class="50-years-carousel"></div>
-</div><div class="item ">      
+
+</div>
+<div class="item ">      
       <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/rita_cuddihy1920x720.jpg" alt="Rita Cuddihy" style="   " />
-      <div class="carousel-caption">
+      <div class="carousel-caption caption-reverse">
        <h2>Rita Cuddihy</h2>
        <h3>Blurb of Image</h3>
-		<div class="caption-readmore">
+		<div class="readmore-reverse">
        	<hr> 
       	<a href="/a_to_z/">Read More <i class="fa fa-angle-right"></i></a>
 		</div>         
 	</div>
-    <div class="50-years-carousel"></div>
-</div><div class="item ">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/homecoming_1920x720.jpg" alt="Homecoming" style="   " />
-      <div class="carousel-caption">
-       <h2>Homecoming</h2>
-       <h3>Blurb of Image</h3>
-		<div class="caption-readmore">
-       	<hr> 
-      	<a href="/a_to_z/">Read More <i class="fa fa-angle-right"></i></a>
-		</div>         
-	</div>
-    <div class="50-years-carousel"></div>
-</div><div class="item ">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/fajardo-anstine_kali-1920x720.jpg" alt="SP2016 Fajardo" style="   " />
-      <div class="carousel-caption">
-       <h2>Fajardo Anstine</h2>
-       <h3>Blurb of Image</h3>
-		<div class="caption-readmore">
-       	<hr> 
-      	<a href="/a_to_z/">Read More <i class="fa fa-angle-right"></i></a>
-		</div>         
-	</div>
-    <div class="50-years-carousel"></div>
-</div><div class="item ">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/elizabeth_miner1920x720.jpg" alt="Miner Elizabeth" style="   " />
-      <div class="carousel-caption">
-       <h2>Elizabeth Milner</h2>
-       <h3>Blurb of Image</h3>
-		<div class="caption-readmore">
-       	<hr> 
-      	<a href="/a_to_z/">Read More <i class="fa fa-angle-right"></i></a>
-		</div>         
-	</div>
-    <div class="50-years-carousel"></div>
-</div></div>  
+</div>
+
+</div>  
 
 <!-- Controls -->
   <a class="left carousel-control" href="#carousel-homepage" role="button" data-slide="prev">
