--- a/springhome_index.html
+++ b/springhome_index.html
@@ -207,11 +207,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Controls -->
   <a class="left carousel-control" href="#carousel-homepage" role="button" data-slide="prev">
-    <i class="fa fa-angle-left"></i>  
+    <i class="fa fa-chevron-circle-left" style="font-size:48px;color:white;opacity:0.4;"></i> 
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#carousel-homepage" role="button" data-slide="next">
-   <i class="fa fa-angle-right"></i>    <span class="sr-only">Next</span>
+   <i class="fa fa-chevron-circle-right" style="font-size:48px;color:white;opacity:0.4;"></i> <span class="sr-only">Next</span>
   </a>
 </div>
 </div>
