--- a/springhome_index.html
+++ b/springhome_index.html
@@ -174,23 +174,41 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <li data-target="#carousel-homepage" data-slide-to="2"></li>
   </ol>-->
 
-  <div class="carousel-inner" role="listbox">
-  <div class="item active">      
-    <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/braxton_tyrone1920x720.jpg" alt="SP2016 Braxton Tyrone Home" style="   " />
+                        <div class="carousel-inner" role="listbox">
+
+
+                           <div class="item active">      
+                            <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/braxton_tyrone1920x720.jpg" alt="SP2016 Braxton Tyrone Home" style="   " />
+
+                              <table cellpadding="0" cellspacing="0">
+                                 <tbody style="display: block;">
+                                    <tr>
+                                       <td>
+
+                              <div class="carousel-caption">
+                                     <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="max-height:200px;float:right;" />
+                                <h2>Title of Image One</h2>
+                                <h3>Title of Image Two</h3>
+                                 <div class="caption-readmore">
+                                    <hr> 
+                                    <a href="">Read More <i class="fa fa-angle-right"></i></a>
+                                 </div>      
+                              </div>
+
+                                       </td>
+                                       <td>
+                                          <div class="carousel-caption-bug">
+                                             <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="max-height:200px;float:right;" />
+                                          </div>
+                                       </td>
+                                    </tr>
+                                 </tbody>
+                              </table>
 
 
 
-    <div class="carousel-caption">
-          <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="max-height:100px;float:right;" />
-     <h2>Title of Image One</h2>
-     <h3>Title of Image Two</h3>
-		<div class="caption-readmore">
-       	<hr> 
-      	<a href="">Read More <i class="fa fa-angle-right"></i></a>
-		</div>      
-	</div>
 
-</div>
+                           </div>
 <div class="item ">      
       <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/rita_cuddihy1920x720.jpg" alt="Rita Cuddihy" style="   " />
       <div class="carousel-caption caption-reverse">
