--- a/springhome_index.html
+++ b/springhome_index.html
@@ -182,7 +182,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="carousel-inner" role="listbox">
    <div class="item active">      
     <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/braxton_tyrone1920x720.jpg" alt="SP2016 Braxton Tyrone Home" style="   " />
-      <table cellpadding="0" cellspacing="0">
+      <table cellpadding="0" cellspacing="0" style="background-color: #00447c">
          <tbody style="display: block;">
             <tr>
                <td class="secondheight">
@@ -197,8 +197,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </div>
 
                </td>
-               <td class="firstheight">
-                  <div class="carousel-caption-bug">
+               <td class="">
+                  <div class="carousel-caption-bug firstheight">
                      <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="float:right;" />
                   </div>
                </td>
