--- a/springhome_index.html
+++ b/springhome_index.html
@@ -55,12 +55,7 @@
 <link rel="shortcut icon" href="/media/assets/ico/favicon.png">
  
 <!-- HeaderCode -->
-<script type="text/javascript">
-   $("table tr").each(function() {
-       $(this).find(".firstheight img").css("max-height", 
-           $(this).find(".secondheight").height()).show();
-   });
-</script>
+
    
 </head>
 
@@ -187,7 +182,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <tr>
                <td class="secondheight">
                 <div class="carousel-caption">
-                       <!-- <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="float:right;" /> -->
+                       <img class="img-responsive 50yearsbug" src="50years85kalumni_bug.png" alt="50years85kalumni_bug" style="float:right;max-height:100px;" />
                   <h2>Title of Image One</h2>
                   <h3>Title of Image Two</h3>
                    <div class="caption-readmore">
