--- a/springhome_index.html
+++ b/springhome_index.html
@@ -176,7 +176,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="carousel-inner" role="listbox">
    <div class="item active">      
-    <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/braxton_tyrone1920x720.jpg" alt="SP2016 Braxton Tyrone Home" style="   " />
+    <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/20160408_cheryl-haggstrom.jpg" alt="SP2016 Cheryl Haggstrom Home" style="   " />
       <table cellpadding="0" cellspacing="0" style="background-color: #00447c">
          <tbody style="display: block;">
             <tr>
@@ -202,9 +202,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       </table>
    </div>
 <div class="item ">      
-      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/rita_cuddihy1920x720.jpg" alt="Rita Cuddihy" style="   " />
+      <img class="img-responsive" src="http://msudenver.edu/media/assets/homepagespring2016/20160408_50th-soiree.jpg" alt="Summer Soiree June 4" style="   " />
       <div class="carousel-caption caption-reverse">
-       <h2>Rita Cuddihy</h2>
+       <h2>Summer Soiree | June 4, 2016</h2>
        <h3>Blurb of Image</h3>
 		<div class="readmore-reverse">
        	<hr> 
