adds all https to path

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -54,11 +54,11 @@
 <![endif]-->
 
 <!-- Fav and touch icons -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/media/assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/media/assets/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/media/assets/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="/media/assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="/media/assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="https://msudenver.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
+<link rel="shortcut icon" href="https://msudenver.edu/media/assets/ico/favicon.png">
 
 <!-- HeaderCode -->
 
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <span class="sr-only">Toggle quick links navigation</span>
                         <span class="fa fa-bars"></span>
                     </button>
-                    <img class="navbar-brand hidden-md hidden-lg img-responsive" src="/media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
+                    <img class="navbar-brand hidden-md hidden-lg img-responsive" src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_transparent_mobile.png" alt="MSU Denver Formal Logo">
 
                 </div>
 
@@ -152,7 +152,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         		<ul class="dropdown-menu"><li><a href="/admissions/apply/first-timeundergraduate/">First-Time Undergraduate</a></li><li><a href="/admissions/apply/transfer/">Transfer Students</a></li><li><a href="/admissions/apply/internationalstudents/">International Students</a></li><li><a href="/admissions/apply/wichewue/">Wiche Wue</a></li><li><a href="/admissions/apply/masters/">Master&rsquo;s Programs</a></li><li><a href="/admissions/apply/militaryveteran/">Military Veterans</a></li><li><a href="/admissions/apply/adultstudents/">Adult Students</a></li><li><a href="/admissions/apply/re-admit/">Re-Admit</a></li><li><a href="/admissions/apply/non-degree/">Non-Degree</a></li><li><a href="/admissions/apply/summeronly/">Summer Only</a></li><li><a href="/admissions/apply/concurrentlyenrolled/">Concurrently Enrolled</a></li><li><a href="/admissions/apply/metromeritus/">Metro Meritus</a></li></ul>
                     		</li>
                               <li class="msudenver_logo hidden-sm">
-              					<img src="/media/assets/homepagespring2016/msudenver_logo_white_transparent.png" alt="MSU Denver 50th Anniversary Logo">
+              					<img src="https://msudenver.edu//media/assets/homepagespring2016/msudenver_logo_white_transparent.png" alt="MSU Denver 50th Anniversary Logo">
 		      				  </li>
                             <li class="dropdown">
                                 <a href="/campuslife">CAMPUS LIFE <b class="caret"></b></a>
@@ -183,7 +183,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   <div class="carousel-inner" role="listbox"><div class="item active">
   <a href="http://msudenver.edu/50/ourpeople/bill-nooning.shtml?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=50thpeoplehealthymove&utm_campaign=50thanniver">
-  <img class="img-responsive" src="/media/content/homepage/20160419_bill-nooning2.jpg" alt="As CEO of Provident Healthcare, MSU Denver alumnus Bill Nooning helms a network of care providers who put patients first." style="   " />
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160419_bill-nooning2.jpg" alt="As CEO of Provident Healthcare, MSU Denver alumnus Bill Nooning helms a network of care providers who put patients first." style="   " />
       <div class="carousel-caption Not Set">
       <h2>Healthy Outcome </h2>
        <h3>Alumnus Bill Nooning, CEO of Provident Healthcare, built a network of care providers that puts patients first.</h3>
@@ -193,7 +193,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
   <!-- Version27.0 --><div class="item Not Set">
   <a href="https://www.msudenver.edu/newsroom/news/2016/february/15-cob-accreditation.shtml?utm_source=msudenverhome&utm_medium=carousel&utm_content=businessaccreditation&">
-  <img class="img-responsive" src="/media/content/homepage/20160408_business-accreditation.jpg" alt="MSU Denver&rsquo;s College of Business is among the five percent of business schools worldwide that have earned AACSB accreditation. " style="   " />
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_business-accreditation.jpg" alt="MSU Denver&rsquo;s College of Business is among the five percent of business schools worldwide that have earned AACSB accreditation. " style="   " />
       <div class="carousel-caption caption-reverse">
       <h2>AACSB Accredited </h2>
        <h3>MSU Denver’s College of Business is among the 5 percent of business schools worldwide that have earned AACSB accreditation.</h3>
@@ -203,7 +203,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
   <!-- Version16.0 --><div class="item Not Set">
   <a href="http://www.msudenver.edu/soiree/?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsummersoiree&utm_campaign=50thanniversary">
-  <img class="img-responsive" src="/media/content/homepage/20160408_50th-soiree.jpg" alt="A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate scholarships." style="   " />
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/20160408_50th-soiree.jpg" alt="A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate scholarships." style="   " />
       <div class="carousel-caption Not Set">
       <h2>Summer Soirée | June 4, 2016</h2>
        <h3>A night that celebrates 50 years of excellence at Metropolitan State University of Denver. All proceeds benefit undergraduate student scholarships.</h3>
@@ -213,7 +213,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </div>
   <!-- Version8.0 --><div class="item Not Set">
   <a href="http://roadrunnersathletics.com/sports/2016/1/7/SpringSportsFestival.aspx?utm_source=msudenverhomepage&utm_medium=carousel&utm_content=eventsportsfestival&utm_c">
-  <img class="img-responsive" src="/media/content/homepage/SpringsSportsFestival04-25v2.jpg" alt="MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games." style="   " />
+  <img class="img-responsive" src="https://msudenver.edu/media/content/homepage/SpringsSportsFestival04-25v2.jpg" alt="MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games." style="   " />
       <div class="carousel-caption caption-reverse">
       <h2>Share the Experience</h2>
        <h3>MSU Denver will host the 2016 NCAA Division II Spring Sports Festival. Volunteer for this one-of-a-kind event on our campus in downtown Denver or attend the games.</h3>
@@ -384,7 +384,7 @@ Celebration of MSU Denver's <br>
                  <a class="t4Edit-page" href="https://adt4apps.msudenver.edu/terminalfour/SiteManager?ctfn=publish&amp;fnno=31&amp;sid=754&amp;chid=1&amp;lang=en&amp;ede=true">&copy;</a>
                 <a href="/">Metropolitan State University of Denver</a><br>
                   <a href="/privacy">Privacy, Terms and Conditions</a> <br>
-              		<a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right;" alt="College Portrait">
+              		<a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right;" alt="College Portrait">
                  </a>
                 <br>
             </p>
@@ -394,17 +394,17 @@ Celebration of MSU Denver's <br>
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- modernizr -->
-<script type="text/javascript" src="/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- jquery -->
-<script type="text/javascript" src="/media/prod/bowercomponents/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 <!-- bootstrap.js -->
-<script type="text/javascript" src="/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- console.polyfill -->
-<script type="text/javascript" src="/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
 <!-- jquery.matchHeight-min.js -->
-<script type="text/javascript" src="/media/prod/js/jquery.matchHeight-min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/jquery.matchHeight-min.js"></script>
 <!-- main.min.js -->
-<script type="text/javascript" src="/media/prod/js/main.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 <!-- FooterCode -->
 <!--Pixel Tracker from AdTaxi 9.11.15-05.31.16 -->
 <img height="1" width="1" style="border-style:none;" alt="" src="//insight.adsrvr.org/track/evnt/?adv=bz3kque&ct=0:z2e79knm&fmt=3"/>
