updates css and js to CDNs

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -17,7 +17,7 @@
     <title>Metropolitan State University of Denver</title>
 <meta name="Description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor's and master's degrees in downtown Denver, Colorado.">
 <!-- Meta Data -->
-           <meta name="og:title" content="Metropolitan State University of Denver" />
+<meta name="og:title" content="Metropolitan State University of Denver" />
  <meta name="og:description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor&rsquo;s and master&rsquo;s degrees in downtown Denver, Colorado." />
  <meta name="description" content="Metropolitan State University of Denver is a fully accredited university offering various bachelor&rsquo;s and master&rsquo;s degrees in downtown Denver, Colorado." />
  <meta name="keywords" content="denver, colorado, college, university, degree, masters" />
@@ -27,12 +27,11 @@
 <meta name="bitly-verification" content="b1f80533a28e"/>
 <meta name="wot-verification" content="89a26a37b525b667f368"/>
 <!--CDN-->
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css' media='screen'>
-
 <!-- CSS -->
-<link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css' rel='stylesheet' type='text/css' media='screen'>
 <link rel="stylesheet" type="text/css" media="screen" href="home2016.css" />
 
 <!-- google analytics -->
@@ -392,18 +391,13 @@ Celebration of MSU Denver's <br>
 </div>
 <!-- ENDS FOOTER -->
 
-<!-- BEGINS SECOND DEPENDENCY INCLUDE -->
-<!-- modernizr -->
+<!-- JS Files -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
-<!-- jquery -->
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
-<!-- bootstrap.js -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- console.polyfill -->
 <script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
-<!-- jquery.matchHeight-min.js -->
-<script type="text/javascript" src="https://msudenver.edu/media/prod/js/jquery.matchHeight-min.js"></script>
-<!-- main.min.js -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 <!-- FooterCode -->
 <!--Pixel Tracker from AdTaxi 9.11.15-05.31.16 -->
@@ -424,8 +418,6 @@ Celebration of MSU Denver's <br>
                 $('b', this).toggleClass("caret caret-up");
             });
     });
-
-
 </script>
 
         <!-- matchHeight -->
