re-organized js files by local or CDN

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -391,13 +391,16 @@ Celebration of MSU Denver's <br>
 </div>
 <!-- ENDS FOOTER -->
 
-<!-- JS Files -->
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<!-- CDN JS Files -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.matchHeight/0.7.0/jquery.matchHeight-min.js"></script>
+<!-- JS Files -->
+<!-- modernizr --><t4 type="media" id="70442" />
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<!-- console.polyfill --><t4 type="media" id="70439" />
+<script type="text/javascript" src="https://msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<!-- main.min.js --><t4 type="media" id="70445" />
 <script type="text/javascript" src="https://msudenver.edu/media/prod/js/main.min.js"></script>
 <!-- FooterCode -->
 <!--Pixel Tracker from AdTaxi 9.11.15-05.31.16 -->
