fixes alignment for news on mobile

--- a/springhome_index.html
+++ b/springhome_index.html
@@ -271,12 +271,12 @@ Celebration of MSU Denver's <br>
     <div role="tabpanel" class="tab-pane active" id="news">
     	<div class="row news-home-item">
   <a href="/newsroom/news/2016/april/28-remi-arata-student.shtml">
-<div class="col-xs-1">
+<div class="col-xs-12 col-sm-1">
 <p class="news-home-month">Apr</p>
 <p class="news-home-day">28</p>
 </div>
 
-<div class="col-xs-11">
+<div class="col-xs-12 col-sm-11">
 
 <p class="news-home-headline">Climbing the walls &hellip; and the rocks</p>
 <p class="news-home-intro">Sophomore Remi Arata approaches computer science &mdash; and competitive climbing &mdash; like a puzzle to be solved.</p>
@@ -286,12 +286,12 @@ Celebration of MSU Denver's <br>
 </div>
 <hr><div class="row news-home-item">
   <a href="/newsroom/news/2016/april/28-kudos.shtml">
-<div class="col-xs-1">
+<div class="col-xs-12 col-sm-1">
 <p class="news-home-month">Apr</p>
 <p class="news-home-day">28</p>
 </div>
 
-<div class="col-xs-11">
+<div class="col-xs-12 col-sm-11">
 
 <p class="news-home-headline">Kudos</p>
 <p class="news-home-intro">This week, we give a shout out to the departments of communication arts and sciences, management and social work.</p>
@@ -301,12 +301,12 @@ Celebration of MSU Denver's <br>
 </div>
 <hr><div class="row news-home-item">
   <a href="/newsroom/news/2016/april/27-luis-torres-profile.shtml">
-<div class="col-xs-1">
+<div class="col-xs-12 col-sm-1">
 <p class="news-home-month">Apr</p>
 <p class="news-home-day">27</p>
 </div>
 
-<div class="col-xs-11">
+<div class="col-xs-12 col-sm-11">
 
 <p class="news-home-headline">'An outspoken conscience that has moved us forward'</p>
 <p class="news-home-intro">Dr. Luis Torres&rsquo; life and career are distinguished by his tireless advocacy for underrepresented students.</p>
@@ -316,12 +316,12 @@ Celebration of MSU Denver's <br>
 </div>
 <hr><div class="row news-home-item">
   <a href="/newsroom/news/2016/april/26-greenway-clean-up-project.shtml">
-<div class="col-xs-1">
+<div class="col-xs-12 col-sm-1">
 <p class="news-home-month">Apr</p>
 <p class="news-home-day">26</p>
 </div>
 
-<div class="col-xs-11">
+<div class="col-xs-12 col-sm-11">
 
 <p class="news-home-headline">Innovative ways to take out the trash</p>
 <p class="news-home-intro">Industrial design and engineering students to test their trash removal inventions in Cherry Creek.</p>
@@ -331,12 +331,12 @@ Celebration of MSU Denver's <br>
 </div>
 <hr><div class="row news-home-item">
   <a href="/newsroom/news/2016/april/26-teacher-education-ranking.shtml">
-<div class="col-xs-1">
+<div class="col-xs-12 col-sm-1">
 <p class="news-home-month">Apr</p>
 <p class="news-home-day">26</p>
 </div>
 
-<div class="col-xs-11">
+<div class="col-xs-12 col-sm-11">
 
 <p class="news-home-headline">MSU Denver ranks No. 1 for educating teachers</p>
 <p class="news-home-intro"> Website says we&rsquo;re best in Colorado for preparing tomorrow&rsquo;s educators.</p>
