--- a/springhome_index.html
+++ b/springhome_index.html
@@ -224,11 +224,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 <!-- Controls -->
   <a class="left carousel-control" href="#carousel-homepage" role="button" data-slide="prev">
-    <i class="fa fa-chevron-circle-left"></i>
+     <span class="fa-stack fa-lg">
+     <i class="fa fa-circle fa-stack-2x"></i>
+     <i class="fa fa-angle-left fa-stack-1x fa-inverse"></i>
+    </span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#carousel-homepage" role="button" data-slide="next">
-   <i class="fa fa-chevron-circle-right"></i>    <span class="sr-only">Next</span>
+   <span class="fa-stack fa-lg">
+     <i class="fa fa-circle fa-stack-2x"></i>
+     <i class="fa fa-angle-right fa-stack-1x fa-inverse"></i>
+    </span>   
+<span class="sr-only">Next</span>
   </a>
 </div>
 </div>
