updates all paths to assets

--- a/2column.html
+++ b/2column.html
@@ -28,14 +28,14 @@
 <meta name="google-site-verification" content="W3RS-MX1q0fLm2k731Ymz8fNmTCdPEizDE5Vzb9ZuoE" />
 
 <!-- CDN -->
-<link href='//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
-<link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
-<link href='//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,700italic,400,300,700,600' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
+<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" media="screen" href="//msudenver.edu/media/prod/bowercomponents/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" media="screen" href="//msudenver.edu/media/assets/css/main-2015.css" />
-<link rel="stylesheet" type="text/css" media="print" href="//msudenver.edu/media/assets/css/print.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="https://msudenver.edu/media/prod/bowercomponents/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="https://msudenver.edu/media/assets/css/main-2015.css" />
+<link rel="stylesheet" type="text/css" media="print" href="https://msudenver.edu/media/assets/css/print.css" />
 
 <!-- HTML5 shim & respond.js, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -45,15 +45,15 @@
 
 <!-- Fav and touch icons -->
 
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="//msudenver.edu/media/assets/ico/apple-touch-icon-144-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="//msudenver.edu/media/assets/ico/apple-touch-icon-114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="//msudenver.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="//msudenver.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
-<link rel="shortcut icon" href="//msudenver.edu/media/assets/ico/favicon.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://msudenver.edu.edu/media/assets/ico/apple-touch-icon-144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://msudenver.edu.edu/media/assets/ico/apple-touch-icon-114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://msudenver.edu.edu/media/assets/ico/apple-touch-icon-72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="https://msudenver.edu.edu/media/assets/ico/apple-touch-icon-57-precomposed.png">
+<link rel="shortcut icon" href="https://msudenver.edu.edu/media/assets/ico/favicon.png">
 
 
 <!-- BEGINS MUlTIPLE COL SPECIFIC DEPENDENCIES  -->
-<script type="text/javascript" src="//msudenver.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu.edu/media/prod/bowercomponents/jquery/jquery.min.js"></script>
 
 <!-- HeaderCode -->
 
@@ -131,7 +131,7 @@
       <!-- MSU DENVER LOGO -->
         <div class="col-lg-3 col-md-3 col-sm-12 msudenver_logo">
           <a href="/">
-<img class="img-responsive center-block" src="//msudenver.edu/media/assets/branding/MSUDenver_50th_Formal.png" alt="MSU Denver Formal Logo">
+<img class="img-responsive center-block" src="https://msudenver.edu.edu/media/assets/branding/MSUDenver_50th_Formal.png" alt="MSU Denver Formal Logo">
             </a>
         </div>
         <!-- ENDS MSU DENVER LOGO -->
@@ -171,7 +171,7 @@
 	<h2>Homepage Option 1</h2>
 	<h3>This is a subtitle for a homepage</h3>
 	<p><figure class="thumbnail" id="101402" style="float : left;max-width : 322px;" >
-<img class="img-responsive" src='//msudenver.edu/media/content/wcms/departmentsiteguidelines/pagecontent2.png' alt='This is an example of an image with a caption floated on the left.'/>
+<img class="img-responsive" src='https://msudenver.edu/media/content/wcms/departmentsiteguidelines/pagecontent2.png' alt='This is an example of an image with a caption floated on the left.'/>
 <figcaption class="caption">This is an example of an image with a caption floated on the left.</figcaption>
 </figure></p>
 <h4>&nbsp;</h4>
@@ -195,7 +195,7 @@
   <div class="panel panel-default clickable" data-href="">
   <div class="panel-heading">Panel Info B</div>
     <div style="height: 300px; overflow:hidden; "class="panel-body">
-      <p><img class="img-responsive" src="//msudenver.edu/media/content/wcms/departmentsiteguidelines/smaller_image_content.png" alt="Smaller Image Content" style="   float : left;" />&zwnj;&zwnj;&zwnj;This is an Information Panel that can be used to display blocks of information. Larger images will not work properly with an Information Panel. For best practice, use a smaller images and float them to the left or right.&nbsp;<span>&zwnj;Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><span><span><br /></span></span></p>
+      <p><img class="img-responsive" src="https://msudenver.edu.edu/media/content/wcms/departmentsiteguidelines/smaller_image_content.png" alt="Smaller Image Content" style="   float : left;" />&zwnj;&zwnj;&zwnj;This is an Information Panel that can be used to display blocks of information. Larger images will not work properly with an Information Panel. For best practice, use a smaller images and float them to the left or right.&nbsp;<span>&zwnj;Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span><span><span><br /></span></span></p>
     </div>
   </div>
 </div><style>
@@ -469,12 +469,12 @@ padding: 0px;
 </a><div class="well col-xs-12" align="center">
 <h4 style="text-align: center;">Connect With Us&zwnj;</h4>
 <hr />
-	<a href='http://msudenver.edu'><img src='//msudenver.edu/media/assets/webicons/twitter.png' alt='Twitter'/></a>
-	<a href='http://msudenver.edu'><img src='//msudenver.edu/media/assets/webicons/facebook.png' alt='Facebook'/></a>
-	<a href='http://msudenver.edu'><img src='//msudenver.edu/media/assets/webicons/youtube-2.png' alt='YouTube'/></a>
-	<a href='http://msudenver.edu'><img src='//msudenver.edu/media/assets/webicons/flickr-2.png' alt='Flickr'/></a>
-	<a href='http://msudenver.edu'><img src='//msudenver.edu/media/assets/webicons/linkedin.png' alt='Linkedin'/></a>
-  	<a href='http://msudenver.edu'><img src='//msudenver.edu/media/assets/webicons/tumblr.png' alt='Tumblr'/></a>
+	<a href='http://msudenver.edu'><img src='https://msudenver.edu/media/assets/webicons/twitter.png' alt='Twitter'/></a>
+	<a href='http://msudenver.edu'><img src='https://msudenver.edu/media/assets/webicons/facebook.png' alt='Facebook'/></a>
+	<a href='http://msudenver.edu'><img src='https://msudenver.edu/media/assets/webicons/youtube-2.png' alt='YouTube'/></a>
+	<a href='http://msudenver.edu'><img src='https://msudenver.edu/media/assets/webicons/flickr-2.png' alt='Flickr'/></a>
+	<a href='http://msudenver.edu'><img src='https://msudenver.edu/media/assets/webicons/linkedin.png' alt='Linkedin'/></a>
+  	<a href='http://msudenver.edu'><img src='https://msudenver.edu/media/assets/webicons/tumblr.png' alt='Tumblr'/></a>
 
 
 </div>
@@ -482,7 +482,7 @@ padding: 0px;
 
 </div>
 <!-- sidemenu.js  -->
-<script type="text/javascript" src="/media/prod/js/sidemenu.js"></script>
+<script type="text/javascript" src="https://msudenver.edu/media/prod/js/sidemenu.js"></script>
 
 
 <!-- ENDS LEFT SIDE (LINK COLUMN/SIDEMENU) -->
@@ -516,7 +516,7 @@ padding: 0px;
 	<div class="col-md-4 col-sm-4 col-xs-12">
             <p>
 
-                <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right; margin-right:50px;" alt="College Portrait">
+                <a href="http://www.collegeportraits.org/CO/MSU_Denver"><img class="img-responsive" src="https://msudenver.edu/media/assets/img/college-portrait-logo-footer.png" style="max-width:120px; float:right; margin-right:50px;" alt="College Portrait">
                  </a>
                   <a href="/privacy">Privacy Statement</a> <br>
                   <a href="http://tops.state.co.us/">Colorado TOPS</a>
@@ -531,13 +531,13 @@ padding: 0px;
 
 <!-- BEGINS SECOND DEPENDENCY INCLUDE -->
 <!-- modernizr -->
-<script type="text/javascript" src="//msudenver.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
+<script type="text/javascript" src="https://msudenver.edu.edu/media/prod/bowercomponents/modernizr/modernizr.custom.38346.js"></script>
 <!-- bootstrap.js -->
-<script type="text/javascript" src="//msudenver.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu.edu/media/prod/bowercomponents/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- console.polyfill -->
-<script type="text/javascript" src="//msudenver.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
+<script type="text/javascript" src="https://msudenver.edu.edu/media/prod/bowercomponents/console-polyfill/index.js"></script>
 <!-- main.min.js -->
-<script type="text/javascript" src="//msudenver.edu/media/prod/js/main.min.js"></script>
+<script type="text/javascript" src="https://msudenver.edu.edu/media/prod/js/main.min.js"></script>
 <!-- google analytics -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
